funcionalidade botao volume

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <title>Focus Timer 2.0</title>
+    <title>Focus Timer 3.0</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
@@ -100,7 +100,7 @@
                         fill="#323238" />
                 </svg>
             </button>
-            <input id="forest-control" type="range" min="0" max="100" value="50">
+            <input class="pseudo" id="fire-control click dark" type="range" min="0" max="100" value="50">
         </div>
     </aside>
 
