refatoracao e loop music

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
-<body>
+<body class="bodyy">
     <header>
-        
+        <input class="theme" type="checkbox">
         <button class="light"><img src="./componentes/lightmode.svg" alt=""></button>
         <button class="dark hide"> <img src="./componentes/darkmode.svg" alt=""></button>
     </header>
@@ -58,7 +58,7 @@
                 60.8158 83Z" fill="#323238" />
                 </svg>
             </button>
-            <input id="forest-control" type="range" min="0" max="100" value="50">
+            <input class="volForest" id="forest-control" type="range" min="0" max="100" value="50">
         </div>
 
         <div class="raincard">
@@ -72,7 +72,7 @@
                         fill="#323238" />
                 </svg>
             </button>
-            <input id="rain-control" type="range" min="0" max="100" value="50">
+            <input class="volRain" id="rain-control" type="range" min="0" max="100" value="50">
         </div>
 
         <div class="coffeCard">
@@ -86,7 +86,7 @@
                         fill="#323238" />
                 </svg>
             </button>
-            <input id="coffe-control" type="range" min="0" max="100" value="50">
+            <input class="volCoffee" id="coffe-control" type="range" min="0" max="100" value="50">
         </div>
 
         <div class="fireCard">
@@ -100,7 +100,7 @@
                         fill="#323238" />
                 </svg>
             </button>
-            <input class="pseudo" id="fire-control click dark" type="range" min="0" max="100" value="50">
+            <input class="volFire" id="fire-control click dark" type="range" min="0" max="100" value="50">
         </div>
     </aside>
 
