Elimando codigos sem funcionalidade

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 <body class="bodyy">
     <header>
-        <input class="theme" type="checkbox">
         <button class="light"><img src="./componentes/lightmode.svg" alt=""></button>
         <button class="dark hide"> <img src="./componentes/darkmode.svg" alt=""></button>
     </header>
@@ -100,7 +99,7 @@
                         fill="#323238" />
                 </svg>
             </button>
-            <input class="volFire" id="fire-control click dark" type="range" min="0" max="100" value="50">
+            <input class="volFire" id="fire-control" type="range" min="0" max="100" value="50">
         </div>
     </aside>
 
