--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body class="bodyy">
     <header>
+        <input id="switch" type="checkbox" name="theme">
+        <label for="switch"></label>
         <button class="light"><img src="./componentes/lightmode.svg" alt=""></button>
         <button class="dark hide"> <img src="./componentes/darkmode.svg" alt=""></button>
     </header>
